# TypOS

./: .gitattributes  .gitignore  Makefile  README.md  TODO  TODO.md  cabal.project.local  krivine.act  krivine2.act  stack.yaml  stlc.act  stlc2.act  stlc3.act  stlc4.act  stlctpp.act  stlctpp2.act  syntax.txt  typos.bib  typos.cabal  untyped.act
.github/workflows/: haskell.yml
Expt/: CdBsb.agda
Expt/Agen/: Basics.agda  Bind.agda  Cop.agda  Examples.agda  MangleActors.agda  Mangler.agda  Pair.agda  Pat.agda  Pub.agda  Solve.agda  Term.agda  Thin.agda  cdb.agda-lib
Src/: ANSI.hs  Actor.hs  Alarm.hs  Bwd.hs  Command.hs  Display.hs  Doc.hs  Driver.hs  Elaboration.hs  Forget.hs  Format.hs  Hide.hs  Info.hs  LaTeX.hs  Location.hs  Machine.hs  Main.hs  Operator.hs  Options.hs  Parse.hs  Pattern.hs  Pretty.hs  Rules.hs  Scope.hs  Semantics.hs  Syntax.hs  Term.hs  Thin.hs  Unelaboration.hs  Utils.hs  Vector.hs  input
Src/Actor/: Display.hs  Parse.hs
Src/Concrete/: Base.hs  Parse.hs  Parser.hs  Pretty.hs
Src/Doc/: Annotations.hs  Internal.hs
Src/Doc/Render/: Terminal.hs
Src/Elaboration/: Monad.hs  Pretty.hs
Src/Machine/: Base.hs  Display.hs  Exec.hs  Matching.hs  Steps.hs  Trace.hs
Src/Main/: Options.hs
Src/Operator/: Eval.hs
Src/Pattern/: Coverage.hs
Src/Syntax/: Debug.hs
Src/Term/: Base.hs  Display.hs  Mangler.hs  Parse.hs  Substitution.hs
Src/Unelaboration/: Monad.hs
emacs/: emacs  typos.el
examples/: as-patterns.act  case-pair.act  elaboration.act  krivine.act  krivine2.act  mltt.act  mltt2.act  mlttEta.act  mlttList.act  mltt_krivine.act  plumbing.act  stlc.act  stlc2.act  stlc3.act  stlc4.act  stlcRules.act  stlctpp.act  stlctpp2.act  stlctpp2.flags  untyped.act
examples/golden/: case-pair.gold  elaboration.gold  krivine2.gold  mltt.gold  mltt2.gold  mlttEta.gold  mlttList.gold  plumbing.gold  stlc.gold  stlc2.gold  stlc3.gold  stlc4.gold  stlctpp.gold  stlctpp2.gold  untyped.gold
failing/: deadlock.act  mltt_krivine.act
papers/2022-SPLS/: Roadmap.md  stuck.act
papers/2022-TYPES/: Makefile  stlc-in-abstract.act  stlc.act  types.tex  typos.bib
papers/2022-TYPES/golden/: mlttEta.gold  stlc-in-abstract.gold  stlc.gold
papers/2022-TYPES/talk/: stlc-animated.tex  typOS_TYPES2022.tex
papers/2022-TYPES/talk/examples/: krivine2.act  mlttEta.act  mlttList.act  stlc.act  untyped.act
papers/2022-TYPES/talk/pictures/actors/: malin.eps
papers/types/: Makefile  types.tex  typos.bib
test/: app-operator-fail.act  app-operator.act  as-patterns.act  barred-atom-pattern.act  barred-atom.act  binders.act  bothinputoutput.act  case-proposal.act  case-tuples-failing.act  case-tuples.act  channelvar-fail.act  citizens.act  communicating-pairs.act  communication-fail.act  coverage.act  covered.act  define-operator.act  define-operator.flags  duplicated-tag.act  duplicatedinput.act  duplicatedoutput.act  elab-channel-failing.act  elab-push-failing.act  elab-send-failing.act  judgement-operator.act  judgement-optional-pattern.act  let-binders.act  losing-finishes.act  malformedPostOp.act  missinginput.act  multi-fail.act  multibind.act  no-space.act  not-actorvar-fail.act  operator-elab-fail-2.act  operator-elab-fail-3.act  operator-elab-fail-4.act  operator-elab-fail.act  operator-fail.act  parse-fail-2.act  (+33 more)
test/Test/: Main.hs
test/golden/: app-operator-fail.gold  app-operator.gold  as-patterns.gold  barred-atom-pattern.gold  barred-atom.gold  binders.gold  bothinputoutput.gold  case-pair-failing.gold  case-pair.gold  case-proposal.gold  case-tuples-failing.gold  case-tuples.gold  channelvar-fail.gold  citizens.gold  communication-fail.gold  coverage.gold  covered.gold  define-operator.gold  duplicatedinput.gold  duplicatedoutput.gold  elab-channel-failing.gold  elab-push-failing.gold  elab-send-failing.gold  judgement-operator.gold  judgement-optional-pattern.gold  let-binders.gold  malformedPostOp.gold  missinginput.gold  multi-fail.gold  multibind.gold  no-space.gold  not-actorvar-fail.gold  operator-elab-fail-2.gold  operator-elab-fail-3.gold  operator-elab-fail-4.gold  operator-elab-fail.gold  operator-fail.gold  parse-fail-2.gold  parse-fail-3.gold  parse-fail.gold  (+27 more)
