cabal-version:       2.2

name:                typos
version:             0.1.0.0
author:              Conor McBride,
                     Fredrik Nordvall Forsberg,
                     Guillaume Allais,
                     Georgi Nakov,
                     Craig Roy

build-type:          Simple
extra-source-files:  README.md

common haskell
  default-extensions:  DeriveTraversable,
                       FlexibleContexts,
                       FlexibleInstances,
                       GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       NamedFieldPuns,
                       RecordWildCards,
                       TupleSections,
                       TypeFamilies,
                       TypeSynonymInstances,
                       LambdaCase

library
  import:              haskell
  exposed-modules:     Actor,
                       Actor.Display,
                       ANSI,
                       Bwd,
                       Command,
                       Concrete.Base,
                       Concrete.Parse,
                       Concrete.Pretty,
                       Display,
                       Doc,
                       Doc.Internal,
                       Doc.Render.Terminal,
                       Elaboration,
                       Elaboration.Pretty,
                       Forget,
                       Format,
                       Hide,
                       Machine,
                       Machine.Base,
                       Machine.Display,
                       Machine.Exec,
                       Machine.Trace,
                       Main,
                       Options,
                       Parse,
                       Pattern,
                       Pretty,
                       Scope,
                       Syntax,
                       Term,
                       Term.Base,
                       Term.Display,
                       Term.Mangler,
                       Term.Substitution,
                       Thin,
                       Unelaboration,
                       Utils

  build-depends:       base <5, containers, mtl, optparse-applicative
  hs-source-dirs:      Src
  default-language:    Haskell2010
  ghc-options:         -Wunused-imports
--                       -fwarn-incomplete-patterns

executable typos
  import:              haskell
  main-is:             Src/Main.hs
  build-depends:       base <5, mtl, containers, optparse-applicative, typos
  default-language:    Haskell2010

test-suite typos-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/
  main-is:             Test/Main.hs
  build-depends:       base <5
                     , filepath
                     , tasty
                     , tasty-silver
  build-tool-depends:  typos:typos
  default-extensions:  RecordWildCards, OverloadedStrings
  default-language:    Haskell2010
  ghc-options:         -Wunused-imports
